--- a/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
+++ b/src/app/components/utility/diary-entry-encounter/diary-entry-encounter.component.html
@@ -1,200 +1,192 @@
-<div
-  *ngIf="campaign"
-  class="container"
+<ng-container *ngIf="campaign">
+
+  <div class="container"
   [ngClass]="{
     'highlight encounter': !diaryEntryView,
     'mb-3': diaryEntryView,
     isBeingCutOut: cutEncounterIndex === index
   }"
-  #card
->
-  <!-- Encounter Heading -->
-  <div class="row">
-    <h4 class="heading col-12">
-      {{ cardData.title }}
+  #card>
+    <!-- Encounter Heading -->
+    <div class="row">
+      <h4 class="heading col-12">
+        {{ cardData.title }}
 
-      <!-- Edit Toggler + Cut Toggler-->
+        <!-- Edit Toggler + Cut Toggler-->
+        <div
+          class="float-right flex-row"
+          [ngClass]="{
+            'd-none': hasUpdatePermission || diaryEntryView,
+            'd-flex': hasUpdatePermission && !diaryEntryView
+          }"
+        >
+          <!-- Cut Toggler -->
+          <div
+            class="btn btn-secondary encounter-hidden mr-2"
+            (click)="toggleCutState()"
+            title="Cut Encounter"
+          >
+            <i class="fas fa-cut"></i>
+          </div>
+
+          <!-- Edit Toggler -->
+          <div
+            class="btn btn-secondary encounter-hidden"
+            (click)="toggleFormState()"
+          >
+            <i
+              class="fa"
+              [ngClass]="{
+                'fa-pencil': isInDisplayState(),
+                'fa-times': !isInDisplayState()
+              }"
+            ></i>
+          </div>
+        </div>
+      </h4>
+
+      <!-- Encounter Location (Must only be rendered for existing encounters, not during create state)-->
+      <div class="container" [ngClass]="{ 'd-none': diaryEntryView }">
+        <ng-container *ngIf="!isInCreateState()">
+          <i class="row" >
+            <span class="col-2">Location:</span>
+            <span class="col-10">
+              <ng-container *ngIf="cardData.location_details">
+                <a [routerLink]="cardData.getAbsoluteLocationRouterUrl()">
+                  {{ cardData.location_details.name }}
+                </a>
+              </ng-container>
+            </span>
+          </i>
+        </ng-container>
+
+      </div>
+    </div>
+
+    <!-- Encounter Body -->
+    <div class="row">
       <div
-        class="float-right flex-row"
         [ngClass]="{
-          'd-none': hasUpdatePermission || diaryEntryView,
-          'd-flex': hasUpdatePermission && !diaryEntryView
+          'col-sm-11 pr-2': !diaryEntryView,
+          'col-12': diaryEntryView
         }"
       >
-        <!-- Cut Toggler -->
-        <div
-          class="btn btn-secondary encounter-hidden mr-2"
-          (click)="toggleCutState()"
-          title="Cut Encounter"
-        >
-          <i class="fas fa-cut"></i>
-        </div>
+        <!-- Encounter Description-->
+        <ng-container *ngIf="isInDisplayState()">
+          <app-textfield
+          [initialText]="cardData.description"
+          [allowEdit]="false"
+          (updateText)="onSubmit()">
+          </app-textfield>
+        </ng-container>
 
-        <!-- Edit Toggler -->
-        <div
-          class="btn btn-secondary encounter-hidden"
-          (click)="toggleFormState()"
-        >
-          <i
-            class="fa"
-            [ngClass]="{
-              'fa-pencil': isInDisplayState(),
-              'fa-times': !isInDisplayState()
-            }"
-          ></i>
-        </div>
-      </div>
-    </h4>
+        <ng-container *ngIf="isInCreateState() || isInUpdateState()">
+          <app-formly-formcontainer
+          [model]="userModel"
+          [fields]="formlyFields"
+          (formlySubmit)="onSubmit()"
+          (formlyCancel)="onCancel()">
+          </app-formly-formcontainer>
+        </ng-container>
 
-    <!-- Encounter Location (Must only be rendered for existing encounters, not during create state)-->
-    <div class="container" [ngClass]="{ 'd-none': diaryEntryView }">
-      <i class="row" *ngIf="!isInCreateState()">
-        <span class="col-2">Location:</span>
-        <span class="col-10">
-          <a
-            *ngIf="cardData.location_details"
-            routerLink="{{ cardData.getAbsoluteLocationRouterUrl() }}"
-          >
-            {{ cardData.location_details.name }}
-          </a>
-        </span>
-      </i>
-    </div>
-  </div>
+        <ng-container *ngIf="isInOutdatedUpdateState()">
+          <app-compare-form-container
+          class="d-flex justify-content-center"
+          [formlyFields]="formlyFields"
+          [modelFromUser]="userModel"
+          [modelFromServer]="serverModel"
+          [displayVertically]="true"
+          (updateSubmit)="onSubmit()"
+          (cancel)="onCancel()">
+          </app-compare-form-container>
+        </ng-container>
 
-  <!-- Encounter Body -->
-  <div class="row">
-    <div
-      [ngClass]="{
-        'col-sm-11 pr-2': !diaryEntryView,
-        'col-12': diaryEntryView
-      }"
-    >
-      <!-- Encounter Description-->
-      <app-textfield
-        *ngIf="isInDisplayState()"
-        [initialText]="cardData.description"
-        [allowEdit]="false"
-        (updateText)="onSubmit()"
-      ></app-textfield>
+        <!-- Encounter Connections -->
+        <ng-container *ngIf="!diaryEntryView && !isInCreateState()">
+          <hr class="white-line mt-4" />
+        </ng-container>
 
-      <app-formly-formcontainer
-        *ngIf="isInCreateState() || isInUpdateState()"
-        [model]="userModel"
-        [fields]="formlyFields"
-        (formlySubmit)="onSubmit()"
-        (formlyCancel)="onCancel()"
-      ></app-formly-formcontainer>
-
-      <app-compare-form-container
-        class="d-flex justify-content-center"
-        *ngIf="isInOutdatedUpdateState()"
-        [formlyFields]="formlyFields"
-        [modelFromUser]="userModel"
-        [modelFromServer]="serverModel"
-        [displayVertically]="true"
-        (updateSubmit)="onSubmit()"
-        (cancel)="onCancel()"
-      ></app-compare-form-container>
-
-      <!-- Encounter Connections -->
-      <hr
-        class="white-line mt-4"
-        *ngIf="!diaryEntryView && !isInCreateState()"
-      />
-
-      <div
-        class="encounter-connections d-flex align-items-center"
-        *ngIf="!diaryEntryView && !isInCreateState()"
-      >
-        <span class="mr-4 tag-label"> Characters: </span>
-        <div class="d-inline-flex align-items-center flex-wrap">
-          <!-- Connection List -->
-          <span
-            class="badge badge-secondary p-2 mr-2"
-            *ngFor="
-              let connection of cardData.encounterConnections;
-              let connectionIndex = index
-            "
-          >
-            <a routerLink="{{ connectedCharacterUrls[connectionIndex] }}">
-              {{ connection.character_details.name }}
-            </a>
-            <i
-              class="fa fa-trash icon ml-1"
-              (click)="deleteEncounterConnection(cardData, connection)"
-              *ngIf="hasDeletePermission"
-            ></i>
-          </span>
-
-          <!-- Connection Create Form -->
-          <form
-            class="d-flex align-items-center"
-            *ngIf="inEncounterConnectionCreationState"
-            (submit)="createEncounterConnection(cardData)"
-          >
-            <select
-              class="form-control"
-              name="character"
-              id="character"
-              [(ngModel)]="baseEncounterConnection.character"
-            >
-              <option
-                *ngFor="let character of characterOptions"
-                value="{{ character.pk }}"
+        <ng-container *ngIf="!diaryEntryView && !isInCreateState()">
+          <div class="encounter-connections d-flex align-items-center">
+            <span class="mr-4 tag-label"> Characters: </span>
+            <div class="d-inline-flex align-items-center flex-wrap">
+              <!-- Connection List -->
+              <span
+                class="badge badge-secondary p-2 mr-2"
+                *ngFor="
+                  let connection of cardData.encounterConnections;
+                  let connectionIndex = index
+                "
               >
-                {{ character.name }}
-              </option>
-            </select>
+                <a [routerLink]="connectedCharacterUrls[connectionIndex]">
+                  {{ connection.character_details.name }}
+                </a>
+                <ng-container *ngIf="hasDeletePermission">
+                  <i class="fa fa-trash icon ml-1" (click)="deleteEncounterConnection(cardData, connection)"></i>
+                </ng-container>
 
-            <i
-              class="fa icon mx-2 fa-times fa-1-5x"
-              (click)="toggleEncounterConnectionCreationState()"
-            ></i>
+              </span>
+  
+              <!-- Connection Create Form -->
+              <ng-container *ngIf="inEncounterConnectionCreationState">
+                <form class="d-flex align-items-center" (submit)="createEncounterConnection(cardData)">
+                  <select
+                  class="form-control"
+                  name="character"
+                  id="character"
+                  [(ngModel)]="baseEncounterConnection.character">
 
-            <button type="submit" class="mx-2">
-              <i class="fa icon fa-check fa-1-5x"></i>
-            </button>
-          </form>
+                    <option *ngFor="let character of characterOptions" [value]="character.pk">
+                      {{ character.name }}
+                    </option>
+                  
+                  </select>
+    
+                  <i class="fa icon mx-2 fa-times fa-1-5x" (click)="toggleEncounterConnectionCreationState()"></i>
+    
+                  <button type="submit" class="mx-2">
+                    <i class="fa icon fa-check fa-1-5x"></i>
+                  </button>
+                </form>
+              </ng-container>
 
-          <!-- Connection Create Icon-Buttons -->
-          <app-inline-create-button
-          [labelText]="'Add Character'"
-          (click)="toggleEncounterConnectionCreationState()"
-          *ngIf="hasCreatePermission && !inEncounterConnectionCreationState"          >     
-          </app-inline-create-button>
-        </div>
+  
+              <!-- Connection Create Icon-Buttons -->
+              <ng-container *ngIf="hasCreatePermission && !inEncounterConnectionCreationState">
+                <app-inline-create-button
+                [labelText]="'Add Character'"
+                (click)="toggleEncounterConnectionCreationState()">     
+                </app-inline-create-button>
+              </ng-container>
+            </div>
+          </div>
+        </ng-container>
+
+
+        <!-- Delete Article -->
+        <ng-container *ngIf="!diaryEntryView">
+          <app-delete-toggle
+          [deleteMessage]="'Delete this encounter?'"
+          (deleteEvent)="articleDelete(cardData)"
+          class="float-right px-0"
+          ></app-delete-toggle>
+        </ng-container>
+
       </div>
 
-      <!-- Delete Article -->
-      <app-delete-toggle
-        *ngIf="!diaryEntryView"
-        [deleteMessage]="'Delete this encounter?'"
-        (deleteEvent)="articleDelete(cardData)"
-        class="float-right px-0"
-      ></app-delete-toggle>
-    </div>
+      <!-- Encounter Order Arrows -->
+      <ng-container *ngIf="!diaryEntryView">
+        <div class="d-flex flex-column order-arrows justify-content-start align-items-end col-sm-1">
+          <i class="fa fa-3x my-2 icon fa-long-arrow-up"
+          (click)="decreaseEncounterOrderIndex()"></i>
+          
+          <i class="fa fa-3x my-2 icon fa-long-arrow-down"
+          (click)="increaseEncounterOrderIndex()"></i>
+        </div>
+      </ng-container>
 
-    <!-- Encounter Order Arrows -->
-    <div
-      *ngIf="!diaryEntryView"
-      class="
-        d-flex
-        flex-column
-        order-arrows
-        justify-content-start
-        align-items-end
-        col-sm-1
-      "
-    >
-      <i
-        class="fa fa-3x my-2 icon fa-long-arrow-up"
-        (click)="decreaseEncounterOrderIndex()"
-      ></i>
-      <i
-        class="fa fa-3x my-2 icon fa-long-arrow-down"
-        (click)="increaseEncounterOrderIndex()"
-      ></i>
     </div>
   </div>
-</div>
+</ng-container>
+
+
