--- a/src/app/components/utility/formly/formly.component.html
+++ b/src/app/components/utility/formly/formly.component.html
@@ -1,8 +1,8 @@
 <div class="form-group mb-4">
-    <label for="{{to.name}}">{{to.label}}</label>
+    <label [for]="to.name">{{to.label}}</label>
     <editor 
     [init]="constants.tinyMCESettings"
-    id="{{to.name}}"
+    [id]="to.name"
     [formControl]="formControl"
     ></editor>
 </div>
