--- a/src/app/components/utility/object-list/object-list.component.html
+++ b/src/app/components/utility/object-list/object-list.component.html
@@ -3,17 +3,21 @@
     <!-- Heading -->
     <h4>
         {{heading}}
-        <i class="fa fa-plus icon ml-1" routerLink="{{createLink}}" [ngClass]="{'d-none': !hasCreatePermission}"></i>
+        <i class="fa fa-plus icon ml-1" 
+        [routerLink]="createLink" 
+        [ngClass]="{'d-none': !hasCreatePermission}"></i>
     </h4>
     <!-- List -->
     <ul>
-        <li *ngFor="let item of items; let index = index">
-            <a [routerLink]="itemLinks[index]">
-                {{item.name}}
-                <ng-container *ngIf="!!item.role">
-                    ({{ item.role}})
-                </ng-container>
-            </a>
-        </li>
+        <ng-container *ngFor="let item of items; let index = index">
+            <li>
+                <a [routerLink]="itemLinks[index]">
+                    {{item.name}}
+                    <ng-container *ngIf="!!item.role">
+                        ({{ item.role}})
+                    </ng-container>
+                </a>
+            </li>
+        </ng-container>
     </ul>
 </div>
